--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/LG.png
+    - assets/flag_thailand.png
+    - assets/flag_ireland.png
+    - assets/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
